<resources>
    <string name="app_name">ExFile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    properties-->
    <string name="cap_type">Type</string>
    <string name="cap_size">Size</string>
    <string name="cap_modified">LastModified</string>
    <string name="menu_cut">cut</string>
    <string name="menu_copy">copy</string>
    <string name="menu_delete">delete</string>
    <string name="descr_overflow">menu_popup</string>
    <string name="menu_pop_rename">Rename</string>
    <string name="menu_pop_prop">Properties</string>
    <string name="menu_pop_move">Move</string>
    <string name="menu_action_search">Search</string>
    <string name="menu_action_new">New</string>
    <string name="menu_action_view">View</string>
    <string name="menu_action_new_folder">New Folder</string>
    <string name="menu_action_new_file">New File</string>
    <string name="menu_action_view_list">List</string>
    <string name="menu_action_view_grid">Grid</string>
    <string name="menu_pop_share">Share</string>
    <string name="send_to">Send to</string>
    <string name="view_type_key">com.flimbis.exfile.VIEW_TYPE_KEY</string>
    <string name="preference_file_key">com.flimbis.exfile.PREF_FILE</string>
    <string name="menu_action_settings">Settings</string>
    <string name="pref_about">About</string>
    <string name="pref_theme">Theme</string>
    <string name="about">This app is a simple File Explorer that provides you quick access to
        functionality like viewing files on your device storages, moving and manipulating files.
    </string>
    <string name="generic_size">%.2f</string>
</resources>
